# emdlib

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindHDF5.cmake
include/: Attribute.h  CMakeLists.txt  DataGroup.h  DataSpace.h  Dataset.h  EmdLib.h  FileManager.h  Frame.h  Group.h  Model.h  Node.h  Util.h
src/: Attribute.cpp  CMakeLists.txt  DataGroup.cpp  DataSpace.cpp  Dataset.cpp  FileManager.cpp  Frame.cpp  Group.cpp  Model.cpp  Node.cpp  Util.cpp
